src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__edge_as_chain.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Cast {
                                    expr: Expr {
                                        kind: Cast {
                                            expr: Expr {
                                                kind: Cast {
                                                    expr: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 2,
                                                                            },
                                                                            span: Span {
                                                                                start: 9,
                                                                                end: 10,
                                                                                start_line: 1,
                                                                                start_col: 10,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 9,
                                                                    end: 10,
                                                                    start_line: 1,
                                                                    start_col: 10,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 9,
                                                            end: 10,
                                                            start_line: 1,
                                                            start_col: 10,
                                                        },
                                                    },
                                                    ty: Type {
                                                        kind: Path(
                                                            TypePath {
                                                                segments: [
                                                                    TypePathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 3,
                                                                            },
                                                                            span: Span {
                                                                                start: 14,
                                                                                end: 17,
                                                                                start_line: 1,
                                                                                start_col: 15,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 14,
                                                                    end: 17,
                                                                    start_line: 1,
                                                                    start_col: 15,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 14,
                                                            end: 17,
                                                            start_line: 1,
                                                            start_col: 15,
                                                        },
                                                    },
                                                },
                                                span: Span {
                                                    start: 9,
                                                    end: 17,
                                                    start_line: 1,
                                                    start_col: 10,
                                                },
                                            },
                                            ty: Type {
                                                kind: Path(
                                                    TypePath {
                                                        segments: [
                                                            TypePathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 4,
                                                                    },
                                                                    span: Span {
                                                                        start: 21,
                                                                        end: 24,
                                                                        start_line: 1,
                                                                        start_col: 22,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 21,
                                                            end: 24,
                                                            start_line: 1,
                                                            start_col: 22,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 21,
                                                    end: 24,
                                                    start_line: 1,
                                                    start_col: 22,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 9,
                                            end: 24,
                                            start_line: 1,
                                            start_col: 10,
                                        },
                                    },
                                    ty: Type {
                                        kind: Path(
                                            TypePath {
                                                segments: [
                                                    TypePathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 5,
                                                            },
                                                            span: Span {
                                                                start: 28,
                                                                end: 33,
                                                                start_line: 1,
                                                                start_col: 29,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 28,
                                                    end: 33,
                                                    start_line: 1,
                                                    start_col: 29,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 28,
                                            end: 33,
                                            start_line: 1,
                                            start_col: 29,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 9,
                                    end: 33,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 35,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 35,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 35,
        start_line: 1,
        start_col: 1,
    },
}
